[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/level.gd" type="Script" id=1]
[ext_resource path="res://Levels/level_assets/tilesets/grasstile.png" type="Texture" id=2]
[ext_resource path="res://Levels/level_assets/tilesets/ts_color.tres" type="TileSet" id=3]
[ext_resource path="res://Levels/level_assets/entities/ent_global.png" type="Texture" id=4]
[ext_resource path="res://Levels/level_assets/entities/jump_pad/animation/jumpPad1.png" type="Texture" id=5]
[ext_resource path="res://Levels/level_assets/entities/spikes/SpikeSingle.png" type="Texture" id=6]

[sub_resource type="TileSet" id=1]

0/name = "grasstile.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 72 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 320, Vector2( 0, 2 ), 64, Vector2( 0, 3 ), 260, Vector2( 0, 4 ), 325, Vector2( 0, 5 ), 65, Vector2( 0, 6 ), 4, Vector2( 0, 7 ), 5, Vector2( 0, 8 ), 1, Vector2( 1, 0 ), 256, Vector2( 1, 1 ), 320, Vector2( 1, 2 ), 64, Vector2( 1, 3 ), 260, Vector2( 1, 4 ), 325, Vector2( 1, 5 ), 65, Vector2( 1, 6 ), 4, Vector2( 1, 7 ), 5, Vector2( 1, 8 ), 1, Vector2( 2, 0 ), 256, Vector2( 2, 1 ), 320, Vector2( 2, 2 ), 64, Vector2( 2, 3 ), 260, Vector2( 2, 4 ), 325, Vector2( 2, 5 ), 65, Vector2( 2, 6 ), 4, Vector2( 2, 7 ), 5, Vector2( 2, 8 ), 1, Vector2( 3, 0 ), 256, Vector2( 3, 1 ), 320, Vector2( 3, 2 ), 64, Vector2( 3, 3 ), 260, Vector2( 3, 4 ), 325, Vector2( 3, 5 ), 65, Vector2( 3, 6 ), 4, Vector2( 3, 7 ), 5, Vector2( 3, 8 ), 1 ]
0/autotile/icon_coordinate = Vector2( 0, 4 )
0/autotile/tile_size = Vector2( 8, 8 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]

0/name = "Door"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 24, 24 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "Key"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( -4, -4 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 24, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "fallBlockSingle1"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 24, 16, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "fallBlockSingle1"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 32, 16, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "ExtenderDouble"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 88, 16, 16, 8 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "Spawn"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( -8, -8 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 88, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "jumpPad1.png 6"
6/texture = ExtResource( 5 )
6/tex_offset = Vector2( -8, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 8, 16, 8 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0
7/name = "SpikeSingle.png 7"
7/texture = ExtResource( 6 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 8, 8 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [  ]
7/z_index = 0

[node name="root" type="Node2D"]
show_behind_parent = true
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]
camera_zoom = 1

[node name="bg_tile" type="TileMap" parent="."]
mode = 0
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 3
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell", "Collision", "tile_set" ]

[node name="bg_decals" type="TileMap" parent="."]
mode = 0
tile_set = null
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell", "tile_set" ]

[node name="fg_tile" type="TileMap" parent="."]
mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 0, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 3
collision_mask = 3
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 196629, 20, 1, 196630, 20, 65539, 196631, 20, 131072, 196647, 20, 3, 196648, 20, 65536, 196649, 20, 131075, 262165, 20, 393219, 262166, 20, 196613, 262167, 20, 327680, 262183, 20, 196611, 262184, 20, 262145, 262185, 20, 262148, 262186, 20, 65536, 262187, 20, 131075, 327680, 17, 2, 327681, 17, 131075, 327702, 20, 393216, 327703, 20, 524291, 327719, 20, 393218, 327720, 20, 458755, 327721, 20, 458753, 327722, 20, 458755, 327723, 20, 524290, 393216, 17, 196610, 393217, 17, 262148, 393218, 17, 65537, 393219, 17, 65537, 393220, 17, 524292, 393228, 20, 2, 393229, 20, 65538, 393230, 20, 65536, 393231, 20, 131074, 458752, 17, 196608, 458753, 17, 262144, 458754, 17, 262144, 458755, 17, 327682, 458763, 20, 1, 458764, 20, 262149, 458765, 20, 262145, 458766, 20, 262145, 458767, 20, 327681, 458777, 20, 3, 458778, 20, 131072, 524288, 17, 196611, 524289, 17, 262144, 524290, 17, 196612, 524291, 17, 524290, 524299, 20, 393219, 524300, 20, 458755, 524301, 20, 458754, 524302, 20, 458755, 524303, 20, 524291, 524313, 20, 196610, 524314, 20, 262148, 524315, 20, 65536, 524316, 20, 65537, 524317, 20, 131074, 589824, 17, 196608, 589825, 17, 262144, 589826, 17, 327681, 589849, 20, 393217, 589850, 20, 458752, 589851, 20, 458752, 589852, 20, 458755, 589853, 20, 524290, 655360, 17, 196610, 655361, 17, 262144, 655362, 17, 327680, 720896, 17, 196609, 720897, 17, 262144, 720898, 17, 327680, 786432, 17, 196608, 786433, 17, 262146, 786434, 17, 327683, 786484, 17, 2, 786485, 17, 65537, 786486, 17, 65539, 786487, 17, 65539, 786488, 17, 65537, 786489, 17, 65537, 786490, 17, 65537, 786491, 17, 65539, 786492, 17, 131075, 851968, 17, 196611, 851969, 17, 262144, 851970, 17, 327681, 852020, 17, 196610, 852021, 17, 262144, 852022, 17, 262145, 852023, 17, 262146, 852024, 17, 262144, 852025, 17, 262144, 852026, 17, 262144, 852027, 17, 262144, 852028, 17, 327681, 917504, 17, 196611, 917505, 17, 262144, 917506, 17, 327683, 917556, 17, 196610, 917557, 17, 262144, 917558, 17, 262144, 917559, 17, 262144, 917560, 17, 262146, 917561, 17, 262144, 917562, 17, 262144, 917563, 17, 262146, 917564, 17, 327680, 983040, 17, 196608, 983041, 17, 262147, 983042, 17, 327683, 983072, 17, 0, 983073, 17, 65539, 983074, 17, 65536, 983075, 17, 65538, 983076, 17, 65536, 983077, 17, 131075, 983092, 17, 393218, 983093, 17, 458755, 983094, 17, 196613, 983095, 17, 262144, 983096, 17, 262144, 983097, 17, 262146, 983098, 17, 262145, 983099, 17, 262144, 983100, 17, 327683, 1048576, 17, 196611, 1048577, 17, 262144, 1048578, 17, 327683, 1048608, 17, 196611, 1048609, 17, 262146, 1048610, 17, 262145, 1048611, 17, 262144, 1048612, 17, 262144, 1048613, 17, 327683, 1048629, 18, 4, 1048630, 17, 196609, 1048631, 17, 262144, 1048632, 17, 262144, 1048633, 17, 262144, 1048634, 17, 262144, 1048635, 17, 262144, 1048636, 17, 327682, 1114112, 17, 196610, 1114113, 17, 262144, 1114114, 17, 262148, 1114115, 17, 131073, 1114139, 18, 4, 1114144, 17, 196608, 1114145, 17, 262147, 1114146, 17, 262144, 1114147, 17, 262146, 1114148, 17, 262144, 1114149, 17, 327681, 1114165, 18, 65540, 1114166, 17, 393219, 1114167, 17, 196613, 1114168, 17, 262144, 1114169, 17, 262144, 1114170, 17, 262144, 1114171, 17, 262144, 1114172, 17, 327683, 1179648, 17, 196611, 1179649, 17, 262144, 1179650, 17, 262144, 1179651, 17, 262148, 1179652, 17, 131074, 1179664, 17, 0, 1179665, 17, 65537, 1179666, 17, 65536, 1179667, 17, 65539, 1179668, 17, 131074, 1179675, 18, 65540, 1179680, 17, 196611, 1179681, 17, 262145, 1179682, 17, 262144, 1179683, 17, 262144, 1179684, 17, 262144, 1179685, 17, 327681, 1179701, 18, 0, 1179702, 18, 131074, 1179703, 17, 393216, 1179704, 17, 196613, 1179705, 17, 262144, 1179706, 17, 262146, 1179707, 17, 262144, 1179708, 17, 327683, 1245184, 17, 196608, 1245185, 17, 262145, 1245186, 17, 262144, 1245187, 17, 262144, 1245188, 17, 262148, 1245189, 17, 131072, 1245200, 17, 196611, 1245201, 17, 262144, 1245202, 17, 262144, 1245203, 17, 262144, 1245204, 17, 327681, 1245211, 18, 65541, 1245216, 17, 196611, 1245217, 17, 262144, 1245218, 17, 262145, 1245219, 17, 262144, 1245220, 17, 262144, 1245221, 17, 327683, 1245237, 18, 196610, 1245238, 18, 262148, 1245239, 18, 131072, 1245240, 17, 196609, 1245241, 17, 262146, 1245242, 17, 262144, 1245243, 17, 262144, 1245244, 17, 327681, 1310720, 17, 196611, 1310721, 17, 262144, 1310722, 17, 262144, 1310723, 17, 262144, 1310724, 17, 262144, 1310725, 17, 327680, 1310736, 17, 196608, 1310737, 17, 262144, 1310738, 17, 262144, 1310739, 17, 262144, 1310740, 17, 262148, 1310741, 17, 65538, 1310742, 17, 65536, 1310743, 17, 131072, 1310747, 18, 131077, 1310749, 17, 2, 1310750, 17, 65538, 1310751, 17, 65537, 1310752, 17, 262149, 1310753, 17, 262144, 1310754, 17, 262144, 1310755, 17, 262144, 1310756, 17, 262146, 1310757, 17, 262148, 1310758, 17, 65539, 1310759, 17, 131074, 1310763, 17, 0, 1310764, 17, 65538, 1310765, 17, 65536, 1310766, 17, 65538, 1310767, 17, 65536, 1310768, 17, 131073, 1310772, 18, 393221, 1310773, 18, 0, 1310774, 18, 458754, 1310775, 18, 524289, 1310776, 17, 196609, 1310777, 17, 262145, 1310778, 17, 262144, 1310779, 17, 262146, 1310780, 17, 327683, 1376256, 17, 196610, 1376257, 17, 262144, 1376258, 17, 262146, 1376259, 17, 262144, 1376260, 17, 262144, 1376261, 17, 262148, 1376262, 17, 65539, 1376263, 17, 65539, 1376264, 17, 65539, 1376265, 17, 65536, 1376266, 17, 65538, 1376267, 17, 65537, 1376268, 17, 65536, 1376269, 17, 65537, 1376270, 17, 65538, 1376271, 17, 65538, 1376272, 17, 262149, 1376273, 17, 262144, 1376274, 17, 262144, 1376275, 17, 262144, 1376276, 17, 262144, 1376277, 17, 262145, 1376278, 17, 262144, 1376279, 17, 262148, 1376280, 17, 65536, 1376281, 17, 65537, 1376282, 17, 65539, 1376283, 17, 65539, 1376284, 17, 65537, 1376285, 17, 262149, 1376286, 17, 262144, 1376287, 17, 262144, 1376288, 17, 262145, 1376289, 17, 262144, 1376290, 17, 262144, 1376291, 17, 262144, 1376292, 17, 262144, 1376293, 17, 262144, 1376294, 17, 262145, 1376295, 17, 262148, 1376296, 17, 65538, 1376297, 17, 65539, 1376298, 17, 65539, 1376299, 17, 262149, 1376300, 17, 262144, 1376301, 17, 262144, 1376302, 17, 262144, 1376303, 17, 262144, 1376304, 17, 262148, 1376305, 17, 65536, 1376306, 17, 65539, 1376307, 17, 65537, 1376308, 17, 65537, 1376309, 17, 65539, 1376310, 17, 65539, 1376311, 17, 65538, 1376312, 17, 262149, 1376313, 17, 262144, 1376314, 17, 262144, 1376315, 17, 262144, 1376316, 17, 327681, 1441792, 17, 393219, 1441793, 17, 458753, 1441794, 17, 458753, 1441795, 17, 458755, 1441796, 17, 458755, 1441797, 17, 458753, 1441798, 17, 458752, 1441799, 17, 458752, 1441800, 17, 458754, 1441801, 17, 458755, 1441802, 17, 458753, 1441803, 17, 458753, 1441804, 17, 458753, 1441805, 17, 458755, 1441806, 17, 458755, 1441807, 17, 458753, 1441808, 17, 458753, 1441809, 17, 458753, 1441810, 17, 458754, 1441811, 17, 458755, 1441812, 17, 458755, 1441813, 17, 458753, 1441814, 17, 458754, 1441815, 17, 458752, 1441816, 17, 458755, 1441817, 17, 458752, 1441818, 17, 458752, 1441819, 17, 458755, 1441820, 17, 458754, 1441821, 17, 458753, 1441822, 17, 458753, 1441823, 17, 458752, 1441824, 17, 458753, 1441825, 17, 458755, 1441826, 17, 458752, 1441827, 17, 458753, 1441828, 17, 458755, 1441829, 17, 458755, 1441830, 17, 458754, 1441831, 17, 458755, 1441832, 17, 458754, 1441833, 17, 458752, 1441834, 17, 458752, 1441835, 17, 458754, 1441836, 17, 458753, 1441837, 17, 458752, 1441838, 17, 458755, 1441839, 17, 458754, 1441840, 17, 458752, 1441841, 17, 458755, 1441842, 17, 458753, 1441843, 17, 458753, 1441844, 17, 458755, 1441845, 17, 458754, 1441846, 17, 458753, 1441847, 17, 458755, 1441848, 17, 458754, 1441849, 17, 458752, 1441850, 17, 458754, 1441851, 17, 458752, 1441852, 17, 524290 )
_sections_unfolded = [ "Occluder", "Transform", "tile_set" ]

[node name="entities" type="TileMap" parent="."]
mode = 0
tile_set = SubResource( 2 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 720951, 5, 0, 983078, 2, 0, 983079, 2, 0, 983080, 2, 0, 983081, 2, 0, 983082, 2, 0, 983083, 2, 0, 983084, 2, 0, 983085, 2, 0, 983086, 2, 0, 983087, 2, 0, 983088, 2, 0, 983089, 2, 0, 983090, 2, 0, 983091, 2, 0, 1114132, 6, 0, 1114140, 2, 0, 1114141, 2, 0, 1114142, 2, 0, 1114143, 2, 0, 1245205, 7, 0, 1245206, 7, 0, 1245207, 7, 0, 1245213, 7, 0, 1245214, 7, 0, 1245215, 7, 0, 1245222, 7, 0, 1245223, 7, 0, 1245227, 7, 0, 1245228, 7, 0, 1245229, 7, 0, 1245230, 7, 0, 1245231, 7, 0, 1245232, 7, 0, 1245236, 7, 0, 1310728, 5, 0, 1310744, 7, 0, 1310745, 7, 0, 1310746, 7, 0, 1310747, 7, 0, 1310748, 7, 0, 1310760, 7, 0, 1310761, 7, 0, 1310762, 7, 0, 1310769, 7, 0, 1310770, 7, 0, 1310771, 7, 0 )
_sections_unfolded = [ "Cell", "tile_set" ]

[node name="fg_decals" type="TileMap" parent="."]
mode = 0
tile_set = null
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell" ]

[node name="objects" type="Node2D" parent="."]
_sections_unfolded = [ "Transform" ]

